...
            tools:src="@drawable/poster_gadispohonketapang" />

        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_judul"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/photo"
            tools:text="@string/tanggal" />

        <TextView
            android:id="@+id/tv_overview"
...
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </FrameLayout>

            <Button
                android:id="@+id/btn_detail"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
...
