<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:rowOrderPreserved="true">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_grid_film" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_check"
        android:text="@string/check_your_internet"
        android:textAllCaps="true"
        android:layout_margin="32dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="invisible"
        android:elevation="3dp"
        android:textColor="@color/colorAccent"/>
    <View
        android:id="@+id/progressBarBG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C6000000"
        android:elevation="1dp"
        android:visibility="visible" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:elevation="2dp"
        android:visibility="visible">

    </ProgressBar>

</FrameLayout>